<resources>
    <string name="app_name">DocScan</string>
    <string name="onboard_image">onboard_image</string>
    <string name="welcome_to_the_docscan">Welcome to the DocScan</string>
    <string name="quickly_scan_sign_and_share_document_with_any_format">Quickly scan,sign and\nshare document with any format.</string>
    <string name="next">Next</string>
    <string name="easly_scan_any_documents_to_pdf_jpg_or_txt_edit_on_the_go"><![CDATA[Easly scan any documents to PDF,\nJPG or TXT & edit on the go]]></string>
    <string name="scan_and_edit_anything">Scan and Edit\nAnything</string>
    <string name="best_signing_and_text_recognition_ocr">Best Signing and\nText Recognition (OCR)</string>
    <string name="convert_picture_to_text_immediately_easily_edit_text_and_share">Convert picture to text immediately\nEasily edit text and share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanner">Scanner</string>
    <string name="setting">setting</string>
    <string name="search">search</string>
    <string name="my_files">My Files</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="floating_button">floating button</string>
    <string name="flash_button">flash_button</string>
    <string name="auto">Auto</string>
    <string name="document">Document</string>
    <string name="cancel">Cancel</string>
    <string name="image_click_button">image_click_button</string>
    <string name="apr_18_2022_doc">Apr 18, 2022 Doc</string>
    <string name="back_button">Back btn</string>
    <string name="delete_button">Delete Button</string>
    <string name="image_show">Image_show</string>
    <string name="_1">1</string>
    <string name="slash">/</string>
    <string name="share_button">share Button</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="add_page">Add Page</string>
    <string name="ocr">OCR</string>
    <string name="camera_button">Camera Button</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="import_files">Import Files</string>
    <string name="upload_files">Upload files</string>
    <string name="logo">Logo</string>
    <string name="doc_scan">Doc Scan</string>
    <string name="floating_btn">floating_btn</string>
    <string name="flash_off">Flash_off</string>
    <string name="flash_on">Flash On</string>
    <string name="auto_flash">Auto Flash</string>
    <string name="gridoverlay">gridOverlay</string>
    <string name="pdf_image">pdf_image</string>
    <string name="sign">Sign</string>
    <string name="retake">Retake</string>
    <string name="done">Done</string>
    <string name="edit_page_image">Edit page image</string>
    <string name="crop">Crop</string>
    <string name="contrast">Contrast</string>
    <string name="filter">Filter</string>
    <string name="scan_more">Scan More</string>
    <string name="save">Save</string>
    <string name="option">option</string>
    <string name="title">Title</string>
    <string name="rotate">Rotate</string>
    <string name="this_is_a_customizable_textview_you_can_copy_share_or_select_all_text">This is a customizable TextView. You can copy, share, or select all text.</string>
    <string name="original">ORIGINAL</string>
    <string name="filterpreview">filterpreview</string>
    <string name="share_single_page">Share Single Page</string>
    <string name="share_entire_document">Share Entire Document</string>
    <string name="share_pdf">Share Pdf</string>
    <string name="show_document_image">show document image</string>
    <string name="docscan_10_2_2024_10_00">DocScan 10/2/2024 10:00</string>

</resources>