<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    tools:context=".ui.mainScreen.MainScreen">

    <LinearLayout
        android:id="@+id/ll_above_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/setting"
            android:src="@drawable/settings"
            android:layout_marginStart="@dimen/dp_15"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scanner"
            android:textSize="20sp"
            android:fontFamily="@font/colfax_medium"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:src="@drawable/search"
            android:layout_marginEnd="@dimen/margin_large"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_myFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_above_nav"
        android:text="@string/my_files"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_16"/>

    <LinearLayout
        android:id="@+id/ll_mid_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_myFiles"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="16sp"
            android:textColor="@color/selector_text_color_m"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/dp_15"
            android:textColor="@color/non_selector_tv_color"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bottombtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/floating_btn"
        android:contentDescription="@string/floating_btn"
        android:backgroundTint="@color/floating_btn_color"
        android:src="@drawable/vector"
        android:layout_alignBottom="@id/ll_mid_bar"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:elevation="@dimen/dp_6"
        app:shapeAppearance="@color/floating_btn_color"
        android:layout_marginBottom="@dimen/dp_20"/>

</RelativeLayout>