<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainScreen.EditFragment"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/above_edit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:src="@drawable/chevron_left"
            android:layout_gravity="center"
            android:padding="@dimen/dp_20"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/dp_15"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apr_18_2022_doc"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:layout_weight="1"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:textColor="@color/head_text_color"/>

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select"
            android:padding="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/option"/>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/image_viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_show"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:scrollbars="horizontal"
        android:layout_below="@id/above_edit_bar"
        android:layout_above="@id/edit_bottom"/>

    <LinearLayout
        android:id="@+id/edit_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_32"
            android:gravity="center">

            <TextView
                android:id="@+id/page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/head_text_color"/>
            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignStart="@id/page_number"
                android:layout_marginStart="@dimen/dp_5"
                android:textStyle="bold"
                android:text="@string/slash"/>

            <TextView
                android:id="@+id/total_page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_alignStart="@id/slash"
                android:layout_marginStart="@dimen/dp_5"
                android:textColor="@color/head_text_color"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10">


            <TextView
                android:id="@+id/btn_retake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro_text_medium"
                android:textColor="@color/sub_heading_text_color"
                android:gravity="center"
                android:drawablePadding="@dimen/dp_2"
                android:text="@string/retake"
                app:drawableTopCompat="@drawable/retake" />


            <TextView
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sub_heading_text_color"
                android:padding="@dimen/dp_3"
                android:text="@string/edit"
                android:drawablePadding="@dimen/dp_4"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/sf_pro_text_medium"
                app:drawableTopCompat="@drawable/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocr"
                android:fontFamily="@font/sf_pro_text_medium"
                android:textColor="@color/sub_heading_text_color"
                android:drawablePadding="@dimen/dp_4"
                android:layout_weight="1"
                android:gravity="center"
                app:drawableTopCompat="@drawable/ocr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/sub_heading_text_color"
                android:fontFamily="@font/sf_pro_text_medium"
                app:drawableTopCompat="@drawable/signature" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/sub_heading_text_color"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/sf_pro_text_medium"
                app:drawableTopCompat="@drawable/share" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_scan_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_more"
                android:textSize="14sp"
                android:paddingTop="@dimen/dp_18"
                android:paddingBottom="@dimen/dp_18"
                android:paddingStart="@dimen/dp_36"
                android:paddingEnd="@dimen/dp_36"
                app:cornerRadius="@dimen/dp_32"
                android:backgroundTint="@color/scan_more_btn"
                android:elevation="@dimen/dp_75"
                android:layout_marginEnd="@dimen/dp_20"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="14sp"
                android:paddingTop="@dimen/dp_18"
                android:paddingBottom="@dimen/dp_18"
                android:paddingStart="@dimen/dp_50"
                android:paddingEnd="@dimen/dp_50"
                app:cornerRadius="@dimen/dp_32"
                android:backgroundTint="@color/save_btn_color"
                android:elevation="@dimen/dp_75"
                android:layout_marginStart="@dimen/dp_20"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>