<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">
    
    <View
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_5"
        android:background="@drawable/view_bg"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_files"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="20sp"
        android:textColor="@color/head_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_36">
        
        <LinearLayout
            android:id="@+id/camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:contentDescription="@string/camera_button"
                android:src="@drawable/camera"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_a_photo"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/head_text_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/import_File_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:contentDescription="@string/camera_button"
                android:src="@drawable/document"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_files"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/head_text_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gallery_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:contentDescription="@string/camera_button"
                android:src="@drawable/gallery"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/head_text_color"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_80"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginBottom="@dimen/dp_20"/>
</LinearLayout>