<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainScreen.CameraFragment">

    <RelativeLayout
        android:id="@+id/ll_above_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_24">

        <ImageButton
            android:id="@+id/flashMode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/off_flash"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_28"
            android:contentDescription="@string/flash_button"/>



        <TextView
            android:id="@+id/auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/auto"
            android:textColor="@color/white"
            android:padding="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_10"
            android:layout_centerHorizontal="true"
            app:drawableRightCompat="@drawable/auto"
            android:layout_marginTop="@dimen/dp_20"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flash_button"
            android:src="@drawable/grid"
            android:padding="@dimen/dp_15"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>


    </RelativeLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@+id/ll_above_bar"/>

    <!-- Grid Overlay -->
    <ImageView
        android:id="@+id/gridOverlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@+id/ll_above_bar"
        android:contentDescription="@string/gridoverlay"
        android:src="@drawable/grid_overlay"
        android:scaleType="fitXY"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/camerabottom_bg"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document"
                android:textColor="@color/head_text_color"
                android:fontFamily="@font/colfax_regular"
                android:textSize="15sp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_76"
            android:layout_marginTop="@dimen/dp_28">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:textColor="@color/head_text_color"
                android:fontFamily="@font/colfax_regular"
                android:layout_alignStart="@id/clickButton"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/dp_24"/>


            <ImageButton
                android:id="@+id/clickButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_shape"
                android:focusableInTouchMode="true"
                android:contentDescription="@string/camera_button"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"/>

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flash_button"
                android:src="@drawable/multi_image"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/dp_15" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>